// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqle/SqlManagementException/SqlManagementExceptionForm render switch match type  1`] = `
<body>
  <textarea
    aria-hidden="true"
    style="letter-spacing:normal;line-height:1.5714285714285714;padding-top:4px;padding-bottom:4px;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';font-weight:;font-size:14px;font-variant:;text-rendering:auto;text-transform:none;width:100%;text-indent:0;padding-left:11px;padding-right:11px;border-width:1px;box-sizing:border-box;word-break:;white-space:pre-wrap;
  min-height:0 !important;
  max-height:none !important;
  height:0 !important;
  visibility:hidden !important;
  overflow:hidden !important;
  position:absolute !important;
  z-index:-1000 !important;
  top:0 !important;
  right:0 !important;
  pointer-events: none !important;
"
    tab-index="-1"
  />
  <div />
  <div>
    <form
      class="ant-form ant-form-vertical"
    >
      <div
        class="ant-form-item ant-form-item-has-success"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-col-24 ant-form-item-label"
          >
            <label
              class=""
              for="type"
              title="匹配类型"
            >
              匹配类型
            </label>
          </div>
          <div
            class="ant-col ant-col-24 ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="ant-radio-group ant-radio-group-outline"
                  id="type"
                >
                  <label
                    class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                  >
                    <span
                      class="ant-radio"
                    >
                      <input
                        checked=""
                        class="ant-radio-input"
                        type="radio"
                        value="sql"
                      />
                      <span
                        class="ant-radio-inner"
                      />
                    </span>
                    <span>
                      关键字
                    </span>
                  </label>
                  <label
                    class="ant-radio-wrapper ant-radio-wrapper-checked ant-radio-wrapper-in-form-item"
                  >
                    <span
                      class="ant-radio ant-radio-checked"
                    >
                      <input
                        class="ant-radio-input"
                        type="radio"
                        value="fp_sql"
                      />
                      <span
                        class="ant-radio-inner"
                      />
                    </span>
                    <span>
                      SQL指纹
                    </span>
                  </label>
                  <label
                    class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                  >
                    <span
                      class="ant-radio"
                    >
                      <input
                        class="ant-radio-input"
                        type="radio"
                        value="ip"
                      />
                      <span
                        class="ant-radio-inner"
                      />
                    </span>
                    <span>
                      IP
                    </span>
                  </label>
                  <label
                    class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                  >
                    <span
                      class="ant-radio"
                    >
                      <input
                        class="ant-radio-input"
                        type="radio"
                        value="cidr"
                      />
                      <span
                        class="ant-radio-inner"
                      />
                    </span>
                    <span>
                      网段
                    </span>
                  </label>
                  <label
                    class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                  >
                    <span
                      class="ant-radio"
                    >
                      <input
                        class="ant-radio-input"
                        type="radio"
                        value="host"
                      />
                      <span
                        class="ant-radio-inner"
                      />
                    </span>
                    <span>
                      主机名
                    </span>
                  </label>
                  <label
                    class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                  >
                    <span
                      class="ant-radio"
                    >
                      <input
                        class="ant-radio-input"
                        type="radio"
                        value="instance"
                      />
                      <span
                        class="ant-radio-inner"
                      />
                    </span>
                    <span>
                      数据源
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-col-24 ant-form-item-label"
          >
            <label
              class=""
              for="desc"
              title="描述"
            >
              描述
            </label>
          </div>
          <div
            class="ant-col ant-col-24 ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <textarea
                  class="ant-input basic-input-wrapper textarea-no-resize css-1pd1cd5"
                  id="desc"
                  placeholder="请输入{{name}}"
                  style="resize: none; height: -70px; min-height: -14px; max-height: -70px;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-col-24 ant-form-item-label"
          >
            <label
              class="ant-form-item-required"
              for="sql"
              title="SQL语句"
            >
              SQL语句
            </label>
          </div>
          <div
            class="ant-col ant-col-24 ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="custom-monaco-editor-wrapper css-1esok7i"
                >
                  <input
                    aria-required="true"
                    class="custom-monaco-editor"
                    height="500px"
                    id="sql"
                    language="sql"
                    options="{"automaticLayout":true,"minimap":{"enabled":false},"fontFamily":"SF Mono","fontSize":14,"fontWeight":"400","lineNumbersMinChars":2,"suggestFontSize":14,"scrollBeyondLastLine":false,"lineHeight":24,"letterSpacing":0.8,"overviewRulerBorder":false,"wordWrap":"on","wrappingStrategy":"advanced","wrappingIndent":"indent","scrollbar":{"vertical":"visible","horizontal":"visible","useShadows":false,"verticalScrollbarSize":12,"horizontalScrollbarSize":12,"alwaysConsumeMouseWheel":false},"folding":false,"lineNumbers":"on","glyphMargin":false,"lineDecorationsWidth":50,"renderValidationDecorations":"on","guides":{"indentation":true,"highlightActiveIndentation":true}}"
                    value="/* input your sql */"
                    width="100%"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</body>
`;

exports[`sqle/SqlManagementException/SqlManagementExceptionForm render switch match type  2`] = `
<body>
  <textarea
    aria-hidden="true"
    style="letter-spacing:normal;line-height:1.5714285714285714;padding-top:4px;padding-bottom:4px;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';font-weight:;font-size:14px;font-variant:;text-rendering:auto;text-transform:none;width:100%;text-indent:0;padding-left:11px;padding-right:11px;border-width:1px;box-sizing:border-box;word-break:;white-space:pre-wrap;
  min-height:0 !important;
  max-height:none !important;
  height:0 !important;
  visibility:hidden !important;
  overflow:hidden !important;
  position:absolute !important;
  z-index:-1000 !important;
  top:0 !important;
  right:0 !important;
  pointer-events: none !important;
"
    tab-index="-1"
  />
  <div />
  <div>
    <form
      class="ant-form ant-form-vertical"
    >
      <div
        class="ant-form-item ant-form-item-has-success"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-col-24 ant-form-item-label"
          >
            <label
              class=""
              for="type"
              title="匹配类型"
            >
              匹配类型
            </label>
          </div>
          <div
            class="ant-col ant-col-24 ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="ant-radio-group ant-radio-group-outline"
                  id="type"
                >
                  <label
                    class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                  >
                    <span
                      class="ant-radio"
                    >
                      <input
                        checked=""
                        class="ant-radio-input"
                        type="radio"
                        value="sql"
                      />
                      <span
                        class="ant-radio-inner"
                      />
                    </span>
                    <span>
                      关键字
                    </span>
                  </label>
                  <label
                    class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                  >
                    <span
                      class="ant-radio"
                    >
                      <input
                        class="ant-radio-input"
                        type="radio"
                        value="fp_sql"
                      />
                      <span
                        class="ant-radio-inner"
                      />
                    </span>
                    <span>
                      SQL指纹
                    </span>
                  </label>
                  <label
                    class="ant-radio-wrapper ant-radio-wrapper-checked ant-radio-wrapper-in-form-item"
                  >
                    <span
                      class="ant-radio ant-radio-checked"
                    >
                      <input
                        class="ant-radio-input"
                        type="radio"
                        value="ip"
                      />
                      <span
                        class="ant-radio-inner"
                      />
                    </span>
                    <span>
                      IP
                    </span>
                  </label>
                  <label
                    class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                  >
                    <span
                      class="ant-radio"
                    >
                      <input
                        class="ant-radio-input"
                        type="radio"
                        value="cidr"
                      />
                      <span
                        class="ant-radio-inner"
                      />
                    </span>
                    <span>
                      网段
                    </span>
                  </label>
                  <label
                    class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                  >
                    <span
                      class="ant-radio"
                    >
                      <input
                        class="ant-radio-input"
                        type="radio"
                        value="host"
                      />
                      <span
                        class="ant-radio-inner"
                      />
                    </span>
                    <span>
                      主机名
                    </span>
                  </label>
                  <label
                    class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                  >
                    <span
                      class="ant-radio"
                    >
                      <input
                        class="ant-radio-input"
                        type="radio"
                        value="instance"
                      />
                      <span
                        class="ant-radio-inner"
                      />
                    </span>
                    <span>
                      数据源
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-col-24 ant-form-item-label"
          >
            <label
              class=""
              for="desc"
              title="描述"
            >
              描述
            </label>
          </div>
          <div
            class="ant-col ant-col-24 ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <textarea
                  class="ant-input basic-input-wrapper textarea-no-resize css-1pd1cd5"
                  id="desc"
                  placeholder="请输入{{name}}"
                  style="resize: none; height: -70px; min-height: -14px; max-height: -70px;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-col-24 ant-form-item-label"
          >
            <label
              class="ant-form-item-required"
              for="ip"
              title="IP"
            >
              IP
            </label>
          </div>
          <div
            class="ant-col ant-col-24 ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  aria-required="true"
                  class="ant-input basic-input-wrapper css-1pd1cd5"
                  id="ip"
                  placeholder="请输入{{name}}"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</body>
`;

exports[`sqle/SqlManagementException/SqlManagementExceptionForm render switch match type  3`] = `
<body>
  <textarea
    aria-hidden="true"
    style="letter-spacing:normal;line-height:1.5714285714285714;padding-top:4px;padding-bottom:4px;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';font-weight:;font-size:14px;font-variant:;text-rendering:auto;text-transform:none;width:100%;text-indent:0;padding-left:11px;padding-right:11px;border-width:1px;box-sizing:border-box;word-break:;white-space:pre-wrap;
  min-height:0 !important;
  max-height:none !important;
  height:0 !important;
  visibility:hidden !important;
  overflow:hidden !important;
  position:absolute !important;
  z-index:-1000 !important;
  top:0 !important;
  right:0 !important;
  pointer-events: none !important;
"
    tab-index="-1"
  />
  <div />
  <div>
    <form
      class="ant-form ant-form-vertical"
    >
      <div
        class="ant-form-item ant-form-item-has-success"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-col-24 ant-form-item-label"
          >
            <label
              class=""
              for="type"
              title="匹配类型"
            >
              匹配类型
            </label>
          </div>
          <div
            class="ant-col ant-col-24 ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="ant-radio-group ant-radio-group-outline"
                  id="type"
                >
                  <label
                    class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                  >
                    <span
                      class="ant-radio"
                    >
                      <input
                        checked=""
                        class="ant-radio-input"
                        type="radio"
                        value="sql"
                      />
                      <span
                        class="ant-radio-inner"
                      />
                    </span>
                    <span>
                      关键字
                    </span>
                  </label>
                  <label
                    class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                  >
                    <span
                      class="ant-radio"
                    >
                      <input
                        class="ant-radio-input"
                        type="radio"
                        value="fp_sql"
                      />
                      <span
                        class="ant-radio-inner"
                      />
                    </span>
                    <span>
                      SQL指纹
                    </span>
                  </label>
                  <label
                    class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                  >
                    <span
                      class="ant-radio"
                    >
                      <input
                        class="ant-radio-input"
                        type="radio"
                        value="ip"
                      />
                      <span
                        class="ant-radio-inner"
                      />
                    </span>
                    <span>
                      IP
                    </span>
                  </label>
                  <label
                    class="ant-radio-wrapper ant-radio-wrapper-checked ant-radio-wrapper-in-form-item"
                  >
                    <span
                      class="ant-radio ant-radio-checked"
                    >
                      <input
                        class="ant-radio-input"
                        type="radio"
                        value="cidr"
                      />
                      <span
                        class="ant-radio-inner"
                      />
                    </span>
                    <span>
                      网段
                    </span>
                  </label>
                  <label
                    class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                  >
                    <span
                      class="ant-radio"
                    >
                      <input
                        class="ant-radio-input"
                        type="radio"
                        value="host"
                      />
                      <span
                        class="ant-radio-inner"
                      />
                    </span>
                    <span>
                      主机名
                    </span>
                  </label>
                  <label
                    class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                  >
                    <span
                      class="ant-radio"
                    >
                      <input
                        class="ant-radio-input"
                        type="radio"
                        value="instance"
                      />
                      <span
                        class="ant-radio-inner"
                      />
                    </span>
                    <span>
                      数据源
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-col-24 ant-form-item-label"
          >
            <label
              class=""
              for="desc"
              title="描述"
            >
              描述
            </label>
          </div>
          <div
            class="ant-col ant-col-24 ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <textarea
                  class="ant-input basic-input-wrapper textarea-no-resize css-1pd1cd5"
                  id="desc"
                  placeholder="请输入{{name}}"
                  style="resize: none; height: -70px; min-height: -14px; max-height: -70px;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-col-24 ant-form-item-label"
          >
            <label
              class="ant-form-item-required"
              for="cidr"
              title="网段"
            >
              网段
            </label>
          </div>
          <div
            class="ant-col ant-col-24 ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  aria-required="true"
                  class="ant-input basic-input-wrapper css-1pd1cd5"
                  id="cidr"
                  placeholder="请输入{{name}}"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</body>
`;

exports[`sqle/SqlManagementException/SqlManagementExceptionForm render switch match type  4`] = `
<body>
  <textarea
    aria-hidden="true"
    style="letter-spacing:normal;line-height:1.5714285714285714;padding-top:4px;padding-bottom:4px;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';font-weight:;font-size:14px;font-variant:;text-rendering:auto;text-transform:none;width:100%;text-indent:0;padding-left:11px;padding-right:11px;border-width:1px;box-sizing:border-box;word-break:;white-space:pre-wrap;
  min-height:0 !important;
  max-height:none !important;
  height:0 !important;
  visibility:hidden !important;
  overflow:hidden !important;
  position:absolute !important;
  z-index:-1000 !important;
  top:0 !important;
  right:0 !important;
  pointer-events: none !important;
"
    tab-index="-1"
  />
  <div />
  <div>
    <form
      class="ant-form ant-form-vertical"
    >
      <div
        class="ant-form-item ant-form-item-has-success"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-col-24 ant-form-item-label"
          >
            <label
              class=""
              for="type"
              title="匹配类型"
            >
              匹配类型
            </label>
          </div>
          <div
            class="ant-col ant-col-24 ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="ant-radio-group ant-radio-group-outline"
                  id="type"
                >
                  <label
                    class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                  >
                    <span
                      class="ant-radio"
                    >
                      <input
                        checked=""
                        class="ant-radio-input"
                        type="radio"
                        value="sql"
                      />
                      <span
                        class="ant-radio-inner"
                      />
                    </span>
                    <span>
                      关键字
                    </span>
                  </label>
                  <label
                    class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                  >
                    <span
                      class="ant-radio"
                    >
                      <input
                        class="ant-radio-input"
                        type="radio"
                        value="fp_sql"
                      />
                      <span
                        class="ant-radio-inner"
                      />
                    </span>
                    <span>
                      SQL指纹
                    </span>
                  </label>
                  <label
                    class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                  >
                    <span
                      class="ant-radio"
                    >
                      <input
                        class="ant-radio-input"
                        type="radio"
                        value="ip"
                      />
                      <span
                        class="ant-radio-inner"
                      />
                    </span>
                    <span>
                      IP
                    </span>
                  </label>
                  <label
                    class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                  >
                    <span
                      class="ant-radio"
                    >
                      <input
                        class="ant-radio-input"
                        type="radio"
                        value="cidr"
                      />
                      <span
                        class="ant-radio-inner"
                      />
                    </span>
                    <span>
                      网段
                    </span>
                  </label>
                  <label
                    class="ant-radio-wrapper ant-radio-wrapper-checked ant-radio-wrapper-in-form-item"
                  >
                    <span
                      class="ant-radio ant-radio-checked"
                    >
                      <input
                        class="ant-radio-input"
                        type="radio"
                        value="host"
                      />
                      <span
                        class="ant-radio-inner"
                      />
                    </span>
                    <span>
                      主机名
                    </span>
                  </label>
                  <label
                    class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                  >
                    <span
                      class="ant-radio"
                    >
                      <input
                        class="ant-radio-input"
                        type="radio"
                        value="instance"
                      />
                      <span
                        class="ant-radio-inner"
                      />
                    </span>
                    <span>
                      数据源
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-col-24 ant-form-item-label"
          >
            <label
              class=""
              for="desc"
              title="描述"
            >
              描述
            </label>
          </div>
          <div
            class="ant-col ant-col-24 ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <textarea
                  class="ant-input basic-input-wrapper textarea-no-resize css-1pd1cd5"
                  id="desc"
                  placeholder="请输入{{name}}"
                  style="resize: none; height: -70px; min-height: -14px; max-height: -70px;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-col-24 ant-form-item-label"
          >
            <label
              class="ant-form-item-required"
              for="host"
              title="主机名"
            >
              主机名
            </label>
          </div>
          <div
            class="ant-col ant-col-24 ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  aria-required="true"
                  class="ant-input basic-input-wrapper css-1pd1cd5"
                  id="host"
                  placeholder="请输入{{name}}"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</body>
`;

exports[`sqle/SqlManagementException/SqlManagementExceptionForm render switch match type  5`] = `
<body>
  <textarea
    aria-hidden="true"
    style="letter-spacing:normal;line-height:1.5714285714285714;padding-top:4px;padding-bottom:4px;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';font-weight:;font-size:14px;font-variant:;text-rendering:auto;text-transform:none;width:100%;text-indent:0;padding-left:11px;padding-right:11px;border-width:1px;box-sizing:border-box;word-break:;white-space:pre-wrap;
  min-height:0 !important;
  max-height:none !important;
  height:0 !important;
  visibility:hidden !important;
  overflow:hidden !important;
  position:absolute !important;
  z-index:-1000 !important;
  top:0 !important;
  right:0 !important;
  pointer-events: none !important;
"
    tab-index="-1"
  />
  <div />
  <div>
    <form
      class="ant-form ant-form-vertical"
    >
      <div
        class="ant-form-item ant-form-item-has-success"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-col-24 ant-form-item-label"
          >
            <label
              class=""
              for="type"
              title="匹配类型"
            >
              匹配类型
            </label>
          </div>
          <div
            class="ant-col ant-col-24 ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="ant-radio-group ant-radio-group-outline"
                  id="type"
                >
                  <label
                    class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                  >
                    <span
                      class="ant-radio"
                    >
                      <input
                        checked=""
                        class="ant-radio-input"
                        type="radio"
                        value="sql"
                      />
                      <span
                        class="ant-radio-inner"
                      />
                    </span>
                    <span>
                      关键字
                    </span>
                  </label>
                  <label
                    class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                  >
                    <span
                      class="ant-radio"
                    >
                      <input
                        class="ant-radio-input"
                        type="radio"
                        value="fp_sql"
                      />
                      <span
                        class="ant-radio-inner"
                      />
                    </span>
                    <span>
                      SQL指纹
                    </span>
                  </label>
                  <label
                    class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                  >
                    <span
                      class="ant-radio"
                    >
                      <input
                        class="ant-radio-input"
                        type="radio"
                        value="ip"
                      />
                      <span
                        class="ant-radio-inner"
                      />
                    </span>
                    <span>
                      IP
                    </span>
                  </label>
                  <label
                    class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                  >
                    <span
                      class="ant-radio"
                    >
                      <input
                        class="ant-radio-input"
                        type="radio"
                        value="cidr"
                      />
                      <span
                        class="ant-radio-inner"
                      />
                    </span>
                    <span>
                      网段
                    </span>
                  </label>
                  <label
                    class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                  >
                    <span
                      class="ant-radio"
                    >
                      <input
                        class="ant-radio-input"
                        type="radio"
                        value="host"
                      />
                      <span
                        class="ant-radio-inner"
                      />
                    </span>
                    <span>
                      主机名
                    </span>
                  </label>
                  <label
                    class="ant-radio-wrapper ant-radio-wrapper-checked ant-radio-wrapper-in-form-item"
                  >
                    <span
                      class="ant-radio ant-radio-checked"
                    >
                      <input
                        class="ant-radio-input"
                        type="radio"
                        value="instance"
                      />
                      <span
                        class="ant-radio-inner"
                      />
                    </span>
                    <span>
                      数据源
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-col-24 ant-form-item-label"
          >
            <label
              class=""
              for="desc"
              title="描述"
            >
              描述
            </label>
          </div>
          <div
            class="ant-col ant-col-24 ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <textarea
                  class="ant-input basic-input-wrapper textarea-no-resize css-1pd1cd5"
                  id="desc"
                  placeholder="请输入{{name}}"
                  style="resize: none; height: -70px; min-height: -14px; max-height: -70px;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-col-24 ant-form-item-label"
          >
            <label
              class="ant-form-item-required"
              for="instance"
              title="数据源"
            >
              数据源
            </label>
          </div>
          <div
            class="ant-col ant-col-24 ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  aria-required="true"
                  class="ant-select ant-select-in-form-item basic-select-wrapper css-x5nat1 ant-select-single ant-select-show-arrow"
                >
                  <div
                    class="ant-select-selector"
                  >
                    <span
                      class="ant-select-selection-search"
                    >
                      <input
                        aria-activedescendant="instance_list_0"
                        aria-autocomplete="list"
                        aria-controls="instance_list"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-owns="instance_list"
                        aria-required="true"
                        autocomplete="off"
                        class="ant-select-selection-search-input"
                        id="instance"
                        readonly=""
                        role="combobox"
                        style="opacity: 0;"
                        type="search"
                        unselectable="on"
                        value=""
                      />
                    </span>
                    <span
                      class="ant-select-selection-placeholder"
                    >
                      请选择{{name}}
                    </span>
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-arrow"
                    style="user-select: none;"
                    unselectable="on"
                  >
                    <span
                      aria-label="down"
                      class="anticon anticon-down ant-select-suffix"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</body>
`;

exports[`sqle/SqlManagementException/SqlManagementExceptionForm should match snapshot 1`] = `
<body>
  <div />
  <div>
    <form
      class="ant-form ant-form-vertical"
    >
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-col-24 ant-form-item-label"
          >
            <label
              class=""
              for="type"
              title="匹配类型"
            >
              匹配类型
            </label>
          </div>
          <div
            class="ant-col ant-col-24 ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="ant-radio-group ant-radio-group-outline"
                  id="type"
                >
                  <label
                    class="ant-radio-wrapper ant-radio-wrapper-checked ant-radio-wrapper-in-form-item"
                  >
                    <span
                      class="ant-radio ant-radio-checked"
                    >
                      <input
                        checked=""
                        class="ant-radio-input"
                        type="radio"
                        value="sql"
                      />
                      <span
                        class="ant-radio-inner"
                      />
                    </span>
                    <span>
                      关键字
                    </span>
                  </label>
                  <label
                    class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                  >
                    <span
                      class="ant-radio"
                    >
                      <input
                        class="ant-radio-input"
                        type="radio"
                        value="fp_sql"
                      />
                      <span
                        class="ant-radio-inner"
                      />
                    </span>
                    <span>
                      SQL指纹
                    </span>
                  </label>
                  <label
                    class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                  >
                    <span
                      class="ant-radio"
                    >
                      <input
                        class="ant-radio-input"
                        type="radio"
                        value="ip"
                      />
                      <span
                        class="ant-radio-inner"
                      />
                    </span>
                    <span>
                      IP
                    </span>
                  </label>
                  <label
                    class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                  >
                    <span
                      class="ant-radio"
                    >
                      <input
                        class="ant-radio-input"
                        type="radio"
                        value="cidr"
                      />
                      <span
                        class="ant-radio-inner"
                      />
                    </span>
                    <span>
                      网段
                    </span>
                  </label>
                  <label
                    class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                  >
                    <span
                      class="ant-radio"
                    >
                      <input
                        class="ant-radio-input"
                        type="radio"
                        value="host"
                      />
                      <span
                        class="ant-radio-inner"
                      />
                    </span>
                    <span>
                      主机名
                    </span>
                  </label>
                  <label
                    class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                  >
                    <span
                      class="ant-radio"
                    >
                      <input
                        class="ant-radio-input"
                        type="radio"
                        value="instance"
                      />
                      <span
                        class="ant-radio-inner"
                      />
                    </span>
                    <span>
                      数据源
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-col-24 ant-form-item-label"
          >
            <label
              class=""
              for="desc"
              title="描述"
            >
              描述
            </label>
          </div>
          <div
            class="ant-col ant-col-24 ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <textarea
                  class="ant-input basic-input-wrapper textarea-no-resize css-1pd1cd5"
                  id="desc"
                  placeholder="请输入{{name}}"
                  style="resize: none; height: -70px; min-height: -14px; max-height: -70px;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-col-24 ant-form-item-label"
          >
            <label
              class="ant-form-item-required"
              for="sql"
              title="SQL语句"
            >
              SQL语句
            </label>
          </div>
          <div
            class="ant-col ant-col-24 ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="custom-monaco-editor-wrapper css-1esok7i"
                >
                  <input
                    aria-required="true"
                    class="custom-monaco-editor"
                    height="500px"
                    id="sql"
                    language="sql"
                    options="{"automaticLayout":true,"minimap":{"enabled":false},"fontFamily":"SF Mono","fontSize":14,"fontWeight":"400","lineNumbersMinChars":2,"suggestFontSize":14,"scrollBeyondLastLine":false,"lineHeight":24,"letterSpacing":0.8,"overviewRulerBorder":false,"wordWrap":"on","wrappingStrategy":"advanced","wrappingIndent":"indent","scrollbar":{"vertical":"visible","horizontal":"visible","useShadows":false,"verticalScrollbarSize":12,"horizontalScrollbarSize":12,"alwaysConsumeMouseWheel":false},"folding":false,"lineNumbers":"on","glyphMargin":false,"lineDecorationsWidth":50,"renderValidationDecorations":"on","guides":{"indentation":true,"highlightActiveIndentation":true}}"
                    value="/* input your sql */"
                    width="100%"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
  <textarea
    aria-hidden="true"
    style="letter-spacing:normal;line-height:1.5714285714285714;padding-top:4px;padding-bottom:4px;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';font-weight:;font-size:14px;font-variant:;text-rendering:auto;text-transform:none;width:100%;text-indent:0;padding-left:11px;padding-right:11px;border-width:1px;box-sizing:border-box;word-break:;white-space:pre-wrap;
  min-height:0 !important;
  max-height:none !important;
  height:0 !important;
  visibility:hidden !important;
  overflow:hidden !important;
  position:absolute !important;
  z-index:-1000 !important;
  top:0 !important;
  right:0 !important;
  pointer-events: none !important;
"
    tab-index="-1"
  />
</body>
`;
